--- a/calculator.html
+++ b/calculator.html
@@ -175,7 +175,7 @@ input[type="number"] {
     </div>
 
     <div class="product-box">
-        <h3 onclick="toggleTable('table5')">中学生Focus（中学まとめ） <span id="toggle_icon_table5">[+]</span></h3>
+        <h3 onclick="toggleTable('table5')">中学生Focus <span id="toggle_icon_table5">[+]</span></h3>
         <div id="table5" class="responsive-table collapsed">
         <table>
             <tr><th></th><th>中1</th><th>中2</th><th>中3</th></tr>
@@ -443,6 +443,7 @@ function resetChecks(){
 </script>
 </body>
 </html>
+
 
 
 
