--- a/calculator.html
+++ b/calculator.html
@@ -125,7 +125,7 @@ input[type="number"] {
 
 <label style="display: flex; align-items: center; margin-bottom: 8px;">
     <input type="checkbox" id="irregularCheck" onchange="toggleIrregularInput()" style="margin-right: 8px;">
-    イレギュラー計算を行う
+    イレギュラー計算
 </label>
 <div id="irregularBonusContainer" class="hidden">
     <label>ボーナス月加算分割支払金（任意）：
@@ -562,3 +562,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
