--- a/calculator.html
+++ b/calculator.html
@@ -36,6 +36,9 @@ td input[type="checkbox"] {
     margin: auto;
     display: block;
 }
+td.discount-value {
+    color: red;
+}
 button, select, input[type="number"] {
     font-size: 1.1em;
     padding: 12px;
@@ -552,7 +555,7 @@ function calculate(){
     // 計算結果の表示
     var html = "<table>";
     // ポイントを割引額の上に表示
-    html += "<tr><td class='label'>合計ポイント</td><td class='value' style='font-weight:bold;'>" + totalPoints.toFixed(2) + "P</td></tr>";
+    html += "<tr><td class='label'>合計ポイント</td><td class='value'>" + totalPoints.toFixed(2) + "P</td></tr>";
     html += "<tr><td class='label'>値引額</td><td class='value'>- " + formatInt(discount) + "円</td></tr>";
     html += "<tr><td class='label'>①現金価格合計（税込）</td><td class='value'>" + formatInt(cashPrice) + "円</td></tr>";
     if(install !== 1){
@@ -647,4 +650,5 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
