--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>分割計算（全機能搭載版）</title>
+<title>分割計算</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -650,5 +650,6 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
