--- a/calculator.html
+++ b/calculator.html
@@ -117,7 +117,7 @@ input[type="number"] {
 
 <label style="display: flex; align-items: center; margin-bottom: 8px;">
     <input type="checkbox" id="irregularCheck" onchange="toggleIrregularInput()" style="margin-right: 8px;">
-    イレギュラー計算を行う
+    イレギュラー計算
 </label>
 
 <div id="irregularBonusContainer" class="hidden">
@@ -650,6 +650,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
