--- a/calculator.html
+++ b/calculator.html
@@ -112,7 +112,7 @@ input[type="number"] {
 </select>
 </label>
 <label>分割回数：
-<input type="number" id="install" value="" min="1" max="36">
+<input type="tel" id="install" value="" min="1" max="36">
 </label>
 
 <label style="display: flex; align-items: center; margin-bottom: 8px;">
@@ -650,6 +650,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
